test/domains/compilerErrors/notsupportedEq-dr-sparse.chpl

var DR: domain(1);
var SP: sparse subdomain(DR);

writeln(SP == DR);
